src/app/pages/home/home.component.scss
.content-container {
  display: flex;
  justify-content: center;
}

.intro-container {
  display: flex;
  flex-direction: column;
  margin-right: 5rem;
}

.button-box {
  margin-top: 3rem;
}

.photo-container {
  img {
    height: 300px;
    width: 275px;
    object-fit: cover;
    object-position: top;
    box-shadow: -50px -50px 0 -40px var(--primary-color), 50px 50px 0 -40px var(--primary-color);
    padding: 2rem;
  }
}

.typing-box {
  display: flex;
  align-items: center;
  white-space: nowrap;
  width: 20ch;
}

.typing {
  display: inline-block;
  width: 12ch;
  animation: typing-animation 1.5s steps(14), blink .5s step-end infinite alternate;
  overflow: hidden;
  border-right: var(--text-color) 3px solid;
  margin-left: 1ch;
}

@keyframes typing-animation {
  from {
    width: 0
  }
}

@keyframes blink {
  50% {
    border-color: transparent
  }
}

@media screen and (max-width: 980px) {
  .intro-container {
    display: flex;
    flex-direction: column;
    margin-right: 2rem;
  }

  .photo-container {
    img {
      height: 150px;
      width: 137px;
      box-shadow: -25px -25px 0 -20px var(--primary-color), 25px 25px 0 -20px var(--primary-color);
      padding: 1rem;
    }
  }
}

@media screen and (max-width: 768px) {
  .intro-container {
    margin-right: 0;
  }

  .content-container {
    display: flex;
    flex-direction: column-reverse;
  }
}

